Add Precision Nutrition

--- a/_data/companies.yml
+++ b/_data/companies.yml
@@ -117,3 +117,7 @@
 - name: Zapier
   url: zapier.com
   job: zapier.com/jobs/
+
+- name: Precision Nutrition
+  url: precisionnutrition.com
+  job: precisionnutrition.com/careers
